Bug 123405 - Auto-numbered items drift out by one on DOC import
Summary: Auto-numbered items drift out by one on DOC import
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.3.0
Keywords: filter:doc
Depends on: 106541
Blocks: DOC-Bullet-Number-Lists 130670
  Show dependency treegraph
 
Reported: 2019-02-12 12:48 UTC by Ralph Corderoy
Modified: 2021-06-24 08:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Source Word DOC from gov.uk. (154.50 KB, application/msword)
2019-02-12 12:50 UTC, Ralph Corderoy
Details
Word DOC saved as PDF from Word. (231.10 KB, application/pdf)
2019-02-12 12:51 UTC, Ralph Corderoy
Details
model-articles-of-association-limited-by-guarantee-small-membership.doc (157.50 KB, application/msword)
2021-03-17 08:58 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Corderoy 2019-02-12 12:48:38 UTC
Description:
Viewing an MS Word DOC file in LibreOffice numbers items differently to Word, rendering references incorrect.

Using https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/756506/model-articles-of-association-limited-by-guarantee-small-membership.doc (attached) the fourth page looks different.  A PDF from Word has been attached.  Word numbers a paragraph 1.1, but LO calls it 2.  That knocks subsequent numbers out.  Word's item 3.2 refers to 3.3, etc., but in LO that's 4.2 still referring to, the now incorrect, 3.3.

Steps to Reproduce:
Open DOC in LO.

Actual Results:
1.1 is called 2, 3 is called 4, ...

Expected Results:
Same as provided PDF.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Ralph Corderoy 2019-02-12 12:50:37 UTC
Created attachment 149223 [details]
Source Word DOC from gov.uk.
Comment 2 Ralph Corderoy 2019-02-12 12:51:29 UTC
Created attachment 149224 [details]
Word DOC saved as PDF from Word.
Comment 3 Xisco Faulí 2019-02-12 13:52:34 UTC
Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: a8f21e120b1073d7019d41e85cc9a15104ed5c93
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

in previous versions, it was even worse... Probably it's already reported...
Comment 4 QA Administrators 2021-02-12 04:15:26 UTC Comment hidden (obsolete)
Comment 5 Ralph Corderoy 2021-02-12 14:23:36 UTC Comment hidden (obsolete)
Comment 6 Justin L 2021-03-17 08:58:04 UTC Comment hidden (no-value)
Comment 7 Justin L 2021-03-17 09:09:45 UTC
repro 7.2+
Comment 8 Ralph Corderoy 2021-03-18 15:42:26 UTC
Just to note that I had already attached the document from comment 0 in comment 1 and the document added just now in comment 6 is different in some way as the file size has changed for starters.
Comment 9 Justin L 2021-04-21 10:44:32 UTC Comment hidden (obsolete)
Comment 10 Justin L 2021-04-22 12:07:44 UTC
This is closely related to bug 106541 (which focuses on Chapter Numbering), and a follow-up patch after this is fixed (probably in 7.3) can be found at https://gerrit.libreoffice.org/c/core/+/114403 which handles this set of bug reports.
Comment 11 Commit Notification 2021-06-24 03:39:02 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b8727666969156534c05b54a1addb54046969a50

tdf#123405 doc import: inherit from all Outline styles

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Justin L 2021-06-24 08:32:28 UTC
comment 2: model-articles-of-association-limited-by-guarantee-small-membership.doc: good. [Indenting of sublevels is still incorrect.]

comment 9: 129221 BulletListsNotResettingAtHeaders MSO.doc: not yet fixed. Marked as NEW instead of duplicate since it has unique issues.