tdf#123405 doc import: inherit from all Outline styles

Good - an example document that proves that inheritance
happens not just with Chapter Numbering.

It might be good to leave this as a later commit,
just as a good proof of the change made here.
Incremental changes, each change with a proof
document showing the necessity of that particular setting.

Change-Id: I69ab1dd3fdab4d54695d9b321b0d2970509090a6